# rosetta-frida

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  docs.yml  pages.yml  pipeline.yml  release.yml
.husky/: pre-commit  pre-push
cli/: index.ts  router.ts
cli/commands/: args.ts  convert.ts  diff.ts  extract.ts  freshness.ts  init.ts  inspect.ts  io.ts  merge.ts  patch.ts  pull.ts  types.ts  validate.ts  verify.ts
docs/: changelog.md  contributing.md  index.md  roadmap.md
docs/api/: overview.md  session.md  tier-1.md  tier-2.md  tier-3.md
docs/assets/: dracula.css
docs/cli/: convert.md  diff.md  extract.md  freshness.md  init.md  inspect.md  merge.md  overview.md  patch.md  pull.md  types.md  validate.md  verify.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/maps/: authoring.md  conversion.md  format.md  marker-block.md
docs/recipes/: aidl-stub-hook.md  debugging.md  field-access.md  frida-compile-integration.md  multi-version-bundle.md  overloaded-methods.md  string-anchored-class.md  superclass-anchored-method.md
scripts/: check-conformance-fixtures.sh  check-pack.sh  check-schema-version.mjs  lint-aidl.mjs
src/: config.test.ts  config.ts  errors.ts  index.ts  java-bridge.test.ts  java-bridge.ts  log.test.ts  log.ts
src/api/: events.ts  (+16 more)
tests/: lint-aidl.test.ts  package-pack.test.ts  smoke.test.ts
(+152 files in other folders)
